# learning_de_pipeline

./: .gitignore  Makefile  README.md
airflow/: Dockerfile  requirements.txt
airflow/dags/: daily_batch.py  hourly_silver.py  weekly_maintenance.py
connect/: shopstream-cdc.json
db/: demo.sql  demo_olap.sql
db/init/: 00_airflow.sql  00_catalog.sql  01_schema.sql  02_seed.sql
dbt/: profiles.yml
dbt/shopstream/: dbt_project.yml
dbt/shopstream/macros/: latest_ds.sql
dbt/shopstream/models/marts/: _marts.yml  dim_customer.sql  dim_product.sql  fct_orders.sql  mart_daily_revenue.sql
dbt/shopstream/models/staging/: _sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql
docker/: compose.core.yml  compose.lakehouse.yml  compose.observability.yml  compose.olap.yml  compose.orchestration.yml  compose.streaming.yml
docker/clickhouse/: prometheus.xml
docs/: DESIGN.md
docs/runbooks/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
generator/: Dockerfile  pyproject.toml
generator/shopstream_generator/: __init__.py  actions.py  clickstream_event_v1.avsc  config.py  events.py  main.py  sessions.py
jobs/streaming/: bronze_ingest.py  realtime_kpis.py
k8s/cluster/: k3d-config.yaml
k8s/core/: generator.yaml  kustomization.yaml  minio.yaml  namespace.yaml  postgres.yaml
k8s/kafka/: kafka.yaml
observability/grafana/dashboards/: shopstream.json
observability/prometheus/: alerts.yml  prometheus.yml
spark/: Dockerfile  spark-defaults.conf
(+1 files in other folders)
