[project]
name = "shopstream-generator"
version = "0.1.0"
description = "Traffic simulator for the fictional ShopStream e-commerce app"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "Faker>=24.0",
]

[project.scripts]
shopstream-generator = "shopstream_generator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shopstream_generator"]
